[package]
name = "url2pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.104.0"
base64 = "0.22.1"
chromiumoxide = "0.7.0"
futures = "0.3.31"
lambda_runtime = "0.14.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.18.0", features = ["v4"] }
aws-config = "1.8.6"
num_cpus = "1.17.0"
rayon = "1.11.0"
